--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Okorie Chukwuma <coke4christ@gmail.com>
+Tiger Eruona Blessing <blessingtiger2020@gmail.com>
